--- a/pong/style.css
+++ b/pong/style.css
@@ -1,3 +1,12 @@
 html, body {
     margin: 0px;
+    overflow: hidden;
+}
+
+#canvas {
+    position:fixed;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
 }
